applications/spinnaker/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: spinnaker
  labels:
    name: spinnaker
