applications/spinnaker/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: spinnaker
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: spinnaker
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: "OnRootMismatch" # Only changes permissions if needed (speeds up boot)
      containers:
      - image: mysql:9.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
        - name: mysql-config
          mountPath: /etc/mysql/conf.d/
      volumes:
      - name: mysql-config
        configMap:
          name: mysql-config
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pv-spinnaker
